--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
           <div class="contact contact_items">
             <h2 class="contact_title">Contact</h2>
             <span><i class="fab fa-whatsapp"></i> 08158788467</span>
-            <span><i class="far fa-envelope"></i> o-pointstudio@gmail.com</span>
+            <span><i class="far fa-envelope"></i> mas.abadi@gmail.com</span>
           </div>
         </div>
       </div>
