--- a/index.html
+++ b/index.html
@@ -302,7 +302,9 @@
 
     <!-- Copyright -->
     <div class="copyright">
-      <p class="footer_copyright">&copy O-POINT Creative Studio 2021</p>
+      <p class="footer_copyright">
+        &copy O-POINT Creative Studio 2021 | Powered by BINCOMM
+      </p>
     </div>
 
     <!-- Script -->
