responsive copyright footer

--- a/index.html
+++ b/index.html
@@ -305,7 +305,11 @@
       <p class="footer_copyright">
         &copy O-POINT Creative Studio 2021 | Powered by BINCOMM
       </p>
+            <p class="footer_copyright_sm">
+        &copy O-POINT Creative Studio 2021 <br> Powered by BINCOMM
+      </p>
     </div>
+    
 
     <!-- Script -->
     <script src="js/main.js"></script>
