Edit typo at design text

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <a
             href="images/web/webbro.jpg"
             class="gallimg"
-            title="Web Deign, Demo-Project | https://webbro-demo.000webhostapp.com - online"
+            title="Web Design, Demo-Project | https://webbro-demo.000webhostapp.com - online"
             target="_blank"
           >
             <img src="images/web/webbro.jpg" alt="" />
@@ -305,11 +305,11 @@
       <p class="footer_copyright">
         &copy O-POINT Creative Studio 2021 | Powered by BINCOMM
       </p>
-            <p class="footer_copyright_sm">
-        &copy O-POINT Creative Studio 2021 <br> Powered by BINCOMM
+      <p class="footer_copyright_sm">
+        &copy O-POINT Creative Studio 2021 <br />
+        Powered by BINCOMM
       </p>
     </div>
-    
 
     <!-- Script -->
     <script src="js/main.js"></script>
