--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
       href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Montserrat:wght@400;500&display=swap"
       rel="stylesheet"
     />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-FJT4X3T585"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-FJT4X3T585");
+    </script>
     <script
       src="https://kit.fontawesome.com/38d842ed84.js"
       crossorigin="anonymous"
