Update video links

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
         <div class="gallitem anim-1" data-name="anim">
           <a
-            href="https://dai.ly/x7ykq2a"
+            href="https://youtu.be/gU4Ym5haWwE"
             class="gallvid"
             title="Animation | Kalyanamitra - Sosialisasi Penanganan Kekerasan Seksual Terhadap Anak Perempuan Berperspektif Gender 2020"
             target="_blank"
@@ -119,7 +119,7 @@
 
         <div class="gallitem" data-name="anim">
           <a
-            href="https://vimeo.com/498617330"
+            href="https://youtu.be/OvYTWr05yCI"
             class="gallvid"
             title="Animation | Rahima - Sosialisasi 5 Prinsip Relasi Keluarga Bahagia 2020"
             target="_blank"
@@ -205,7 +205,7 @@
 
         <div class="gallitem" data-name="anim">
           <a
-            href="https://vimeo.com/561930677"
+            href="https://youtu.be/ZdXyyo0Swlw"
             class="gallvid"
             title="Video | Video Report - TTT Bank DKI 2020"
             target="_blank"
