--- a/index.html
+++ b/index.html
@@ -97,10 +97,13 @@
 
         <div class="gallitem anim-1" data-name="anim">
           <a
+<iframe class="mfp-iframe" src="https://youtu.be/gU4Ym5haWwE" frameborder="0" allow="autoplay" allowfullscreen></iframe>
+<!--
             href="https://youtu.be/gU4Ym5haWwE"
             class="gallvid"
             title="Animation | Kalyanamitra - Sosialisasi Penanganan Kekerasan Seksual Terhadap Anak Perempuan Berperspektif Gender 2020"
             target="_blank"
+-->
           >
             <img src="images/animation/Kalyanamitra.jpg" alt="" />
           </a>
