--- a/index.html
+++ b/index.html
@@ -98,9 +98,7 @@
         <div class="gallitem anim-1" data-name="anim">
           <a
             <iframe class="mfp-iframe gallvid" src="https://youtu.be/gU4Ym5haWwE" frameborder="0" allow="autoplay" allowfullscreen></iframe>
-            <!--
-            href="https://youtu.be/gU4Ym5haWwE"
-             -->
+            <!-- href="https://youtu.be/gU4Ym5haWwE -->
             class="gallvid"
             title="Animation | Kalyanamitra - Sosialisasi Penanganan Kekerasan Seksual Terhadap Anak Perempuan Berperspektif Gender 2020"
             target="_blank"     
