--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
         <div class="gallitem anim-1" data-name="anim">
           <a
-            href="https://youtu.be/gU4Ym5haWwE
+            href="https://youtu.be/gU4Ym5haWwE"
             class="gallvid"
             title="Animation | Kalyanamitra - Sosialisasi Penanganan Kekerasan Seksual Terhadap Anak Perempuan Berperspektif Gender 2020"
             target="_blank"     
