--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <!-- Meta Tag -->
     <meta
       name="description"
-      content="O-Point Creative Studio - Creative Services"
+      content="Bincomm Creative Studio - Creative Services"
     />
-    <meta property="og:title" content="O-Point Creative Studio" />
+    <meta property="og:title" content="Bincomm Creative Studio" />
     <meta
       property="og:description"
       content="Graphic Design, Event Support, Animation, Video Production & Editing, Web Design & Development"
     />
-    <meta property="og:type" content="O-Point website - Portofolio" />
-    <title>O-Point Creative Studio</title>
+    <meta property="og:type" content="Bincomm website - Portofolio" />
+    <title>Bincomm Creative Studio</title>
 
     <link rel="shortcut icon" href="images/O-point_icon.png" type="image/png" />
 
@@ -67,7 +67,7 @@
     <!-- Hero-Block -->
     <section class="block block-logo">
       <div class="logo-header">
-        <img class="logo" src="images/SVG/o-pint-logo.svg" />
+        <img class="logo" src="images/SVG/bincomm-pint-logo.svg" />
       </div>
     </section>
 
@@ -302,7 +302,7 @@
     <footer class="footer_container">
       <div class="footer_box">
         <div class="footer footer_logo">
-          <img src="images/SVG/o-pint-logo.svg" alt="" />
+          <img src="images/SVG/bincomm-pint-logo.svg" alt="" />
         </div>
         <div class="footer footer_contact">
           <div class="contact contact_items">
@@ -317,10 +317,10 @@
     <!-- Copyright -->
     <div class="copyright">
       <p class="footer_copyright">
-        &copy O-POINT Creative Studio 2021 | Powered by BINCOMM
+        &copy bincomm Creative Studio 2022 | Powered by BINCOMM
       </p>
       <p class="footer_copyright_sm">
-        &copy O-POINT Creative Studio 2021 <br />
+        &copy bincomm Creative Studio 2022 <br />
         Powered by BINCOMM
       </p>
     </div>
