--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:type" content="Bincomm website - Portofolio" />
     <title>Bincomm Creative Studio</title>
 
-    <link rel="shortcut icon" href="images/O-point_icon.png" type="image/png" />
+    <link rel="shortcut icon" href="images/bincomm_icon.png" type="image/png" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
