--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
 
         <div class="gallitem" data-name="web">
           <a
-            href="images/web/webbro.jpg"
+            href="images/web/moncher.jpg"
             class="gallimg"
-            title="Web Design, Demo-Project | https://webbro-demo.000webhostapp.com - online"
+            title="Web Design, Demo-Project | https://moncher-online.netlify.app - online"
             target="_blank"
           >
-            <img src="images/web/webbro.jpg" alt="" />
+            <img src="images/web/moncher.jpg" alt="" />
           </a>
         </div>
 
@@ -130,12 +130,12 @@
 
         <div class="gallitem" data-name="web">
           <a
-            href="images/web/kebunku.jpg"
+            href="images/web/Web-PTLSS.jpg"
             class="gallimg"
-            title="Web Deign, Demo-Project | kebunq.com - offline"
+            title="Web Design, PT Sofien Lombok Santosa | ptlss.com - online"
             target="_blank"
           >
-            <img src="images/web/kebunku.jpg" alt="" />
+            <img src="images/web/Web-PTLSS.jpg" alt="" />
           </a>
         </div>
 
@@ -155,12 +155,12 @@
 
         <div class="gallitem" data-name="web">
           <a
-            href="images/web/yoursite.jpg"
+            href="images/web/webbro.jpg"
             class="gallimg"
-            title="Web Deign, Demo-Project | yoursite.com - offline"
+            title="Web Design, Demo-Project | https://webbro-demo.000webhostapp.com - offline"
             target="_blank"
           >
-            <img src="images/web/yoursite.jpg" alt="" />
+            <img src="images/web/webbro.jpg" alt="" />
           </a>
         </div>
 
@@ -308,7 +308,7 @@
           <div class="contact contact_items">
             <h2 class="contact_title">Contact</h2>
             <span><i class="fab fa-whatsapp"></i> 08158788467</span>
-            <span><i class="far fa-envelope"></i> mas.abadi@gmail.com</span>
+            <span><i class="far fa-envelope"></i> office@bincomm.online</span>
           </div>
         </div>
       </div>
